syntax = "proto3";
package admin_student_skpi;
option go_package = "handlers/admin/student_skpi";

message Meta {
  string message = 1;
  uint32 status = 2;
  string code = 3;
}

message Pagination {
  uint32 page = 1;
  uint32 limit = 2;
  uint32 prev = 3;
  uint32 next = 4;
  uint32 total_pages = 5;
  uint32 total_records = 6;
}

message GetListRequest {
  uint32 page = 1;
  uint32 limit = 2;
  string study_program_id = 3;
  string name = 4;
  int64 nim_number = 5;
  int64 nim_number_from = 6;
  int64 nim_number_to = 7;
  string is_approved = 8;
}

message GetListResponseData {
  string id = 1;
  string student_id = 2;
  int64 student_nim_number = 3;
  string student_name = 4;
  string student_study_program_id = 5;
  string student_study_program_name = 6;
  string student_dikti_study_program_code = 7;
  bool is_approved = 8;
}

message GetListResponse {
  Meta meta = 1;
  Pagination pagination = 2;
  repeated GetListResponseData data = 3;
}

message GetDetailRequest {
  string id = 1;
}

message GetDetailResponseDataAchievement {
  string id = 1;
  string name = 2;
  uint32 year = 3;
}

message GetDetailResponseDataOrganization {
  string id = 1;
  string name = 2;
  string position = 3;
  uint32 service_length = 4;
}

message GetDetailResponseDataCertificate {
  string id = 1;
  string name = 2;
}

message GetDetailResponseDataCharacterBuilding {
  string id = 1;
  string name = 2;
}

message GetDetailResponseDataInternship {
  string id = 1;
  string name = 2;
}

message GetDetailResponseDataLanguage {
  string id = 1;
  string name = 2;
  string score = 3;
  string date = 4;
}

message GetDetailResponseData {
  string id = 1;
  string student_id = 2;
  int64 student_nim_number = 3;
  string student_name = 4;
  string student_study_program_id = 5;
  string student_study_program_name = 6;
  string student_dikti_study_program_code = 7;
  string skpi_number = 8;
  bool is_approved = 9;
  string achievement_path = 10;
  string achievement_path_type = 11;
  string achievement_url = 12;
  string organization_path = 13;
  string organization_path_type = 14;
  string organization_url = 15;
  string certificate_path = 16;
  string certificate_path_type = 17;
  string certificate_url = 18;
  string language_path = 19;
  string language_path_type = 20;
  string language_url = 21;
  repeated GetDetailResponseDataAchievement achievements = 22;
  repeated GetDetailResponseDataOrganization organizations = 23;
  repeated GetDetailResponseDataCertificate certificates = 24;
  repeated GetDetailResponseDataCharacterBuilding character_buildings = 25;
  repeated GetDetailResponseDataInternship internships = 26;
  repeated GetDetailResponseDataLanguage languages = 27;
}

message GetDetailResponse {
  Meta meta = 1;
  GetDetailResponseData data = 2;
}

message UpsertRequestDataAchievement {
  string name = 1;
  uint32 year = 2;
}

message UpsertRequestDataOrganization {
  string name = 1;
  string position = 2;
  uint32 service_length = 3;
}

message UpsertRequestDataCertificate {
  string name = 1;
}

message UpsertRequestDataCharacterBuilding {
  string name = 1;
}

message UpsertRequestDataInternship {
  string name = 1;
}

message UpsertRequestDataLanguage {
  string name = 1;
  string score = 2;
  string date = 3;
}

message UpsertRequest {
  string student_id = 1;
  string achievement_path = 2;
  string achievement_path_type = 3;
  string organization_path = 4;
  string organization_path_type = 5;
  string certificate_path = 6;
  string certificate_path_type = 7;
  string language_path = 8;
  string language_path_type = 9;
  repeated UpsertRequestDataAchievement achievements = 10;
  repeated UpsertRequestDataOrganization organizations = 11;
  repeated UpsertRequestDataCertificate certificates = 12;
  repeated UpsertRequestDataCharacterBuilding character_buildings = 13;
  repeated UpsertRequestDataInternship internships = 14;
  repeated UpsertRequestDataLanguage languages = 15;
}

message UpsertResponseData {}

message UpsertResponse {
  Meta meta = 1;
  UpsertResponseData data = 2;
}

message ApproveRequest {
  string id = 1;
  string skpi_number = 2;
}

message ApproveResponseData {}

message ApproveResponse {
  Meta meta = 1;
  ApproveResponseData data = 2;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponseData {}

message DeleteResponse {
  Meta meta = 1;
  DeleteResponseData data = 2;
}

service AdminStudentSkpiHandler {
  rpc GetList(GetListRequest) returns (GetListResponse) {}
  rpc GetDetail(GetDetailRequest) returns (GetDetailResponse) {}
  rpc Upsert(UpsertRequest) returns (UpsertResponse) {}
  rpc Approve(ApproveRequest) returns (ApproveResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

